# isaac_ros_pose_estimation

./: .gitattributes  README.md
isaac_ros_centerpose/: CMakeLists.txt  package.xml  pytest.ini  setup.cfg  setup.py
isaac_ros_centerpose/config/: centerpose_node.yaml  centerpose_visualizer_node.yaml  decoder_params.yaml  decoder_params_test.yaml
isaac_ros_centerpose/gxf/centerpose/: CMakeLists.txt  centerpose_ext.cpp
isaac_ros_centerpose/gxf/centerpose/components/: centerpose_detection.hpp  centerpose_detection_to_isaac.cpp  centerpose_detection_to_isaac.hpp  centerpose_postprocessor.cpp  centerpose_postprocessor.hpp  centerpose_types.hpp  centerpose_visualizer.cpp  centerpose_visualizer.hpp  cuboid3d.cpp  cuboid3d.hpp  cuboid_pnp_solver.cpp  cuboid_pnp_solver.hpp  soft_nms_nvidia.cpp  soft_nms_nvidia.hpp  video_buffer_utils.hpp
isaac_ros_centerpose/include/isaac_ros_centerpose/: centerpose_decoder_node.hpp  centerpose_visualizer_node.hpp
isaac_ros_centerpose/isaac_ros_centerpose/: CenterPoseDecoder.py  CenterPoseDecoderUtils.py
isaac_ros_centerpose/launch/: isaac_ros_centerpose.launch.py  isaac_ros_centerpose_core.launch.py  isaac_ros_centerpose_tensor_rt.launch.py  isaac_ros_centerpose_triton.launch.py  isaac_ros_centerpose_visualizer_core.launch.py
isaac_ros_centerpose/scripts/: centerpose_pytorch2onnx.py
isaac_ros_centerpose/src/: centerpose_decoder_node.cpp  centerpose_visualizer_node.cpp
isaac_ros_centerpose/test/: centerpose_decoder_node_test.cpp  test_centerpose_pol.py  test_centerpose_pol_triton.py
isaac_ros_centerpose/test/models/: centerpose_shoe.onnx  shoe_resnet_140.onnx
isaac_ros_centerpose/test/models/centerpose_shoe/: config.pbtxt
isaac_ros_centerpose/test/models/centerpose_shoe/1/: .gitignore
isaac_ros_centerpose/test/test_cases/gray_shoe/: image.json
isaac_ros_centerpose/test/test_cases/shoe/: camera_info.json  image.json
isaac_ros_dope/: CMakeLists.txt  package.xml
isaac_ros_dope/config/: dope_config.yaml  dope_node.yaml  isaac_ros_dope.yaml
isaac_ros_dope/gxf/dope/: CMakeLists.txt  dope_decoder.cpp  dope_decoder.hpp  dope_ext.cpp
isaac_ros_dope/include/isaac_ros_dope/: dope_decoder_node.hpp
isaac_ros_dope/launch/: isaac_ros_dope_core.launch.py  isaac_ros_dope_tensor_rt.launch.py  isaac_ros_dope_triton.launch.py
isaac_ros_dope/scripts/: dope_converter.py
isaac_ros_dope/src/: dope_decoder_node.cpp
isaac_ros_dope/test/: isaac_ros_dope_pol.py
isaac_ros_dope/test/test_cases/pose_estimation_0/: camera_info.json  image.json
isaac_ros_foundationpose/: CMakeLists.txt  package.xml
isaac_ros_foundationpose/config/: foundationpose_model_config.yaml  isaac_ros_foundationpose_spec.yaml  namespace_injector_rule.yaml  nitros_foundationpose_node.yaml  nitros_foundationpose_tracking_node.yaml  realsense.yaml
isaac_ros_foundationpose/include/isaac_ros_foundationpose/: foundationpose_node.hpp  foundationpose_tracking_node.hpp
isaac_ros_foundationpose/launch/: isaac_ros_foundationpose.launch.py  isaac_ros_foundationpose_core.launch.py  isaac_ros_foundationpose_hawk.launch.py  isaac_ros_foundationpose_hawk_tracking.launch.py  isaac_ros_foundationpose_isaac_sim.launch.py  isaac_ros_foundationpose_isaac_sim_tracking.launch.py  isaac_ros_foundationpose_realsense.launch.py  isaac_ros_foundationpose_realsense_tracking.launch.py  isaac_ros_foundationpose_tracking.launch.py  isaac_ros_foundationpose_tracking_core.launch.py
isaac_ros_foundationpose/rviz/: foundationpose.rviz  foundationpose_hawk.rviz  foundationpose_hawk_tracking.rviz  foundationpose_isaac_sim.rviz  foundationpose_realsense.rviz  foundationpose_realsense_tracking.rviz  foundationpose_tracking.rviz  foundationpose_zed.rviz
isaac_ros_foundationpose/src/: detection2_d_array_filter.cpp  detection2_d_to_mask.cpp  foundationpose_node.cpp  foundationpose_selector_node.cpp  foundationpose_tracking_node.cpp
isaac_ros_foundationpose/test/: generate_engines.py  isaac_ros_foundationpose_bbox_pol.py  isaac_ros_foundationpose_fixed_axis_angles_pol.py  isaac_ros_foundationpose_iterative_refine_pol.py  isaac_ros_foundationpose_pol.py  isaac_ros_foundationpose_symmetry_axes_pol.py  isaac_ros_foundationpose_tracking_pol.py
isaac_ros_foundationpose/test/test_cases/foundationpose/: camera_info.json  detection2_d.json
isaac_ros_foundationpose_models_install/: CMakeLists.txt  package.xml
isaac_ros_foundationpose_models_install/asset_scripts/: install_foundationpose_models.sh
isaac_ros_gxf_extensions/gxf_isaac_centerpose/: CMakeLists.txt  package.xml
isaac_ros_gxf_extensions/gxf_isaac_centerpose/gxf/extensions/centerpose/: centerpose_ext.cpp
isaac_ros_gxf_extensions/gxf_isaac_dope/: CMakeLists.txt  package.xml
isaac_ros_gxf_extensions/gxf_isaac_dope/gxf/dope/: dope_decoder.cpp  dope_decoder.hpp  dope_ext.cpp
isaac_ros_gxf_extensions/gxf_isaac_foundationpose/: CMakeLists.txt  package.xml
isaac_ros_gxf_extensions/gxf_isaac_foundationpose/gxf/foundationpose/: foundationpose_decoder.cpp  foundationpose_decoder.cu  foundationpose_decoder.cu.hpp  foundationpose_decoder.hpp  foundationpose_ext.cpp  foundationpose_render.cpp  foundationpose_render.cu  foundationpose_render.cu.hpp  foundationpose_render.hpp  foundationpose_sampling.cpp  foundationpose_sampling.cu  foundationpose_sampling.cu.hpp  foundationpose_sampling.hpp  foundationpose_sync.cpp  foundationpose_sync.hpp  foundationpose_transformation.cpp  foundationpose_transformation.hpp  foundationpose_utils.cpp  foundationpose_utils.hpp  mesh_storage.cpp  mesh_storage.hpp  render_receptive_scheduling_term.cpp  render_receptive_scheduling_term.hpp
isaac_ros_pose_proc/: CMakeLists.txt  package.xml
isaac_ros_pose_proc/scripts/: pose_distribution_visualizer.py
isaac_ros_pose_proc/src/: averaging_filter_node.cpp  detection3_d_array_to_pose_node.cpp  distance_selector_node.cpp  outlier_filter_node.cpp  pose_array_to_pose_node.cpp  stability_filter_node.cpp
isaac_ros_pose_proc/test/: isaac_ros_averaging_filter_test.py  isaac_ros_distance_selector_test.py  isaac_ros_outlier_filter_test.py  isaac_ros_stability_filter_test.py
(+48 files in other folders)
