<?xml version="1.0"?>

<!--
Copyright (c) 2021, NVIDIA CORPORATION.  All rights reserved.

NVIDIA CORPORATION and its licensors retain all intellectual property
and proprietary rights in and to this software, related documentation
and any modifications thereto.  Any use, reproduction, disclosure or
distribution of this software and related documentation without an express
license agreement from NVIDIA CORPORATION is strictly prohibited.
-->

<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>isaac_ros_dope</name>
  <version>0.9.0</version>
  <description>Deep learning based pose estimation</description>
  <maintainer email="ethany@nvidia.com">Ethan Yu</maintainer>
  <maintainer email="jeffreys@nvidia.com">Jeff Smith</maintainer>  
  <license>NVIDIA Isaac ROS Software License</license>
  <url type="website">https://developer.nvidia.com/isaac-ros-gems/</url>
  <author>Ethan Yu</author>
  <author>Jeff Smith</author>
  
  <buildtool_depend>ament_cmake</buildtool_depend>

  <build_depend>eigen</build_depend>

  <depend>cv_bridge</depend>
  <depend>isaac_ros_dnn_encoders</depend>
  <depend>isaac_ros_nvengine_interfaces</depend>
  <depend>isaac_ros_tensor_rt</depend>
  <depend>isaac_ros_triton</depend>
  <depend>message_filters</depend>
  <depend>rclcpp</depend>
  <depend>rcl_yaml_parser</depend>
  <depend>sensor_msgs</depend>
  <depend>tf2_eigen</depend>

  <test_depend>ament_lint_auto</test_depend>
  <test_depend>ament_lint_common</test_depend>
  <test_depend>isaac_ros_test</test_depend>
  <test_depend>sensor_msgs_py</test_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
